      (Robert Collins)

    * ``bzr help`` now provides cross references to other help topics using
      the _see_also facility on command classes. Likewise the bzr_man
      documentation, and the bzr.1 man page also include this information.
      (Robert Collins)

    * Tags are now included in logs, that use the long log formatter. 
      (Erik Bågfors, Alexander Belchenko)

    * digest authentication is now supported for proxy and http.
      (Vincent Ladeuil).

  INTERNALS:

    * bzrlib API compatability with 0.8 has been dropped, cleaning up some
      code paths. (Robert Collins)

    * Change the format of chroot urls so that they can be safely manipulated
      by generic url utilities without causing the resulting urls to have
      escaped the chroot. A side effect of this is that creating a chroot
      requires an explicit action using a ChrootServer.
      (Robert Collins, Andrew Bennetts)

    * Deprecate Branch.get_root_id() because branches don't have root ids,
      rather than fixing bug #96847.  (Aaron Bentley)

    * WorkingTree.apply_inventory_delta provides a better alternative to
      WorkingTree._write_inventory.  (Aaron Bentley)

    * Convenience method TestCase.expectFailure ensures that known failures
      do not silently pass.  (Aaron Bentley)

    * Transport.local_abspath now raises NotLocalUrl rather than 
      TransportNotPossible. (Martin Pool, Ian Clatworthy)

    * New SmartServer hooks facility. There are two initial hooks documented
      in bzrlib.transport.smart.SmartServerHooks. The two initial hooks allow
      plugins to execute code upon server startup and shutdown.
      (Robert Collins).

    * SmartServer in standalone mode will now close its listening socket
      when it stops, rather than waiting for garbage collection. This primarily
      fixes test suite hangs when a test tries to connect to a shutdown server.
      It may also help improve behaviour when dealing with a server running